damn .. there was a typo in one regex name. :)
git-svn-id: http://svn.textmate.org/trunk/Modula.tmbundle@144 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -26,12 +26,12 @@
    backgroundColor = "#181818";
    
    patterns = (
-      {  name = "keywords.modula3";
+      {  name = "keywords.modula3-";
          foregroundColor = "#05e0e0";
          match = "\\<(ANY|ARRAY|AS|BEGIN|BITS|BRANDED|BY|CASE|CONST|DIV|DO|ELSE|ELSIF|END|EVAL|EXCEPT|EXCEPTION|EXIT|EXPORTS|FINALLY|FOR|FROM|GENERIC|IF|IMPORT|INTERFACE|LOCK|LOOP|METHODS|MOD|MODULE|OBJECT|OF|OVERRIDES|PROCEDURE|RAISE|RAISES|READONLY|RECORD|REF|REPEAT|RETURN|REVEAL|ROOT|SET|THEN|TO|TRY|TYPE|TYPECASE|UNSAFE|UNTIL|UNTRACED|VALUE|VAR|WHILE|WITH)\\>";
       },
       
-      {  name = "identifiers.reserved.modula-3";
+      {  name = "keywords.identifiers.reserved.modula-3";
          foregroundColor = "#128787";
          match = "\\<(ABS|ADDRESS|ADR|ADRSIZE|BITSIZE|BOOLEAN|BYTESIZE|CARDINAL|CEILING|CHAR|DEC|DISPOSE|EXTENDED|FALSE|FIRST|FLOAT|FLOOR|INC|INTEGER|ISTYPE|LAST|LONGREAL|LOOPHOLE|MAX|MIN|MUTEX|NARROW|NEW|NIL|NULL|NUMBER|ORD|REAL|REFANY|ROUND|SUBARRAY|TEXT|TRUE|TRUNC|TYPECODE|VAL)\\>";
       },
