* initial commit of the diff bundle which should highlight   normal, unified and context diff format and some subversion stuff.   for more infos see the Diff/README.txt.
* added the diff and modula bundles to the global README.

* added a r-note to the modula-3 highlighting about the
  changes in r147 from chris thomas, thanks for this btw. :)
  i cant believe that i left such typos when i released it.



git-svn-id: http://svn.textmate.org/trunk/Modula.tmbundle@160 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -1,6 +1,10 @@
 {
    name = "Modula-3";
    
+   // r1 (2005jan29)
+   // - chris thomas fixed my stupid typos and
+   //   fixed some bugs, sorry for this.
+   // 
    // r0 (2004dec04)
    // - initial version, afaik
    //   based on http://research.compaq.com/SRC/m3defn/html/complete.html
