* fixed some strange grammar in the modula syntax comments
* initial commit of the svn blame command, which should be
  a more fancy version of the annotate thing.
  it features klickable lines and a formater written in
  ruby which is compatible to ruby-1.6.8, which is
  the standard ruby shipped with os-x



git-svn-id: http://svn.textmate.org/trunk/Modula.tmbundle@203 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -3,7 +3,7 @@
    
    // r1 (2005jan29)
    // - chris thomas fixed my stupid typos and
-   //   fixed some bugs, sorry for this.
+   //   some bugs, thanks for this.
    // 
    // r0 (2004dec04)
    // - initial version, afaik
