• Added scopeName key to all languages. Most of them as source.<filename>. • Added a language for plain text files, currently just markups bullet points (so I can continue these on 'enter' using a scoped snippet). • Added a new “firstLineMatch” key to Perl, Ruby, and Shell languages. • The C/Objective-C languages use the scopeName in their include directives, this doesn't work for beta 5. • Ruby now includes “source.ruby” when using #{ ... } in strings. • Added capture names to a few languages (objective-c methods, though it's not very consistant, we'll need to discuss how to split up functions and name the various parts). • Removed plist filetype from XML, assuming that people loading a plist into a text editor would generally use the old-style format.
git-svn-id: http://svn.textmate.org/trunk/Modula.tmbundle@612 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -1,5 +1,6 @@
 {
    name = "Modula-3";
+   scopeName = "source.modula-3";
    
    // r1 (2005jan29)
    // - chris thomas fixed my stupid typos and
