--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -31,42 +31,42 @@
    backgroundColor = "#181818";
    
    patterns = (
-      {  name = "keywords.modula-3";
+      {  name = "keyword.modula-3";
          foregroundColor = "#05e0e0";
          match = "\\<(ANY|ARRAY|AS|BEGIN|BITS|BRANDED|BY|CASE|CONST|DIV|DO|ELSE|ELSIF|END|EVAL|EXCEPT|EXCEPTION|EXIT|EXPORTS|FINALLY|FOR|FROM|GENERIC|IF|IMPORT|INTERFACE|LOCK|LOOP|METHODS|MOD|MODULE|OBJECT|OF|OVERRIDES|PROCEDURE|RAISE|RAISES|READONLY|RECORD|REF|REPEAT|RETURN|REVEAL|ROOT|SET|THEN|TO|TRY|TYPE|TYPECASE|UNSAFE|UNTIL|UNTRACED|VALUE|VAR|WHILE|WITH)\\>";
       },
       
-      {  name = "keywords.identifiers.reserved.modula-3";
+      {  name = "keyword.identifier.reserved.modula-3";
          foregroundColor = "#128787";
          match = "\\<(ABS|ADDRESS|ADR|ADRSIZE|BITSIZE|BOOLEAN|BYTESIZE|CARDINAL|CEILING|CHAR|DEC|DISPOSE|EXTENDED|FALSE|FIRST|FLOAT|FLOOR|INC|INTEGER|ISTYPE|LAST|LONGREAL|LOOPHOLE|MAX|MIN|MUTEX|NARROW|NEW|NIL|NULL|NUMBER|ORD|REAL|REFANY|ROUND|SUBARRAY|TEXT|TRUE|TRUNC|TYPECODE|VAL)\\>";
       },
       
-      {  name = "keywords.logical.modula-3";
+      {  name = "keyword.logical.modula-3";
          foregroundColor = "#0d93df"; //9fd8d8";
          match = "\\<(IN|NOT|AND|OR)\\>";
       },
       
-    { name = "constants.numeric.modula-3";
+    { name = "constant.numeric.modula-3";
       "foregroundColor[2]" = "#61e01c";
       match = "(\\s)((\\-){0,1}((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)(L|l|UL|ul|u|U|F|f)?)";
     },
     
     
-      {  name = "strings.single-quoted.modula-3";
+      {  name = "string.single-quoted.modula-3";
          foregroundColor = "#b4f00a";
          begin = "'";
          end = "'";
          swallow = "\\\\.";
       },
     
-      {  name = "strings.double-quoted.modula-3";
+      {  name = "string.double-quoted.modula-3";
          begin = "\"";
          end = "\"";
          swallow = "\\\\.";
          foregroundColor = "#b4f00a";
       },
       
-      {  name = "comments.block.modula-3";
+      {  name = "comment.block.modula-3";
          begin = "\\(\\*";
          end = "\\*\\)";
 //      swallow = "\\\\.";
