Add key equivalent of ⌃⌥⇧M to grammar.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Modula.tmbundle@4320 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -18,6 +18,8 @@
 			<string>]</string>
 		</array>
 	</array>
+	<key>keyEquivalent</key>
+	<string>^~M</string>
 	<key>name</key>
 	<string>Modula-3</string>
 	<key>patterns</key>
