Move preference rules out of the grammar and into a preference item.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Modula.tmbundle@4590 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key>name</key>
 	<string>Modula</string>
+	<key>ordering</key>
+	<array>
+		<string>479D53FA-6ED6-11D9-8471-0011242E4184</string>
+		<string>58BF6715-3B7A-4E22-BDE4-E80827A5A247</string>
+	</array>
 	<key>uuid</key>
 	<string>391B059C-6ED6-11D9-891B-0011242E4184</string>
 </dict>
