Remove swallow use in favor of a constant.character.escape pattern.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Modula.tmbundle@4654 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -44,8 +44,15 @@
 			<string>'</string>
 			<key>name</key>
 			<string>string.quoted.single.modula-3</string>
-			<key>swallow</key>
-			<string>\\'</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>match</key>
+					<string>\\'</string>
+					<key>name</key>
+					<string>constant.character.escape.apostrophe.modula-3</string>
+				</dict>
+			</array>
 		</dict>
 		<dict>
 			<key>begin</key>
@@ -54,8 +61,15 @@
 			<string>"</string>
 			<key>name</key>
 			<string>string.quoted.double.modula-3</string>
-			<key>swallow</key>
-			<string>\\.</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>match</key>
+					<string>\\.</string>
+					<key>name</key>
+					<string>constant.character.escape.modula-3</string>
+				</dict>
+			</array>
 		</dict>
 		<dict>
 			<key>begin</key>
