--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -48,9 +48,9 @@
 			<array>
 				<dict>
 					<key>match</key>
-					<string>\\'</string>
+					<string>\\([ntrf\\'"]|([0-7]{3}))</string>
 					<key>name</key>
-					<string>constant.character.escape.apostrophe.modula-3</string>
+					<string>constant.character.escape.modula-3</string>
 				</dict>
 			</array>
 		</dict>
@@ -65,7 +65,7 @@
 			<array>
 				<dict>
 					<key>match</key>
-					<string>\\.</string>
+					<string>\\([ntrf\\'"]|([0-7]{3}))</string>
 					<key>name</key>
 					<string>constant.character.escape.modula-3</string>
 				</dict>
