Adding new punctuation scopes to various rules.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Modula.tmbundle@5499 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Modula-3.plist
+++ b/Syntaxes/Modula-3.plist
@@ -40,8 +40,24 @@
 		<dict>
 			<key>begin</key>
 			<string>'</string>
+			<key>beginCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.begin.modula-3</string>
+				</dict>
+			</dict>
 			<key>end</key>
 			<string>'</string>
+			<key>endCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.end.modula-3</string>
+				</dict>
+			</dict>
 			<key>name</key>
 			<string>string.quoted.single.modula-3</string>
 			<key>patterns</key>
@@ -57,8 +73,24 @@
 		<dict>
 			<key>begin</key>
 			<string>"</string>
+			<key>beginCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.begin.modula-3</string>
+				</dict>
+			</dict>
 			<key>end</key>
 			<string>"</string>
+			<key>endCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.end.modula-3</string>
+				</dict>
+			</dict>
 			<key>name</key>
 			<string>string.quoted.double.modula-3</string>
 			<key>patterns</key>
@@ -74,6 +106,14 @@
 		<dict>
 			<key>begin</key>
 			<string>\(\*</string>
+			<key>captures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.comment.modula-3</string>
+				</dict>
+			</dict>
 			<key>end</key>
 			<string>\*\)</string>
 			<key>name</key>
