--- a/info.plist
+++ b/info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>contactEmailRot13</key>
@@ -7,9 +7,9 @@
 	<key>contactName</key>
 	<string>Torsten Becker</string>
 	<key>description</key>
-	<string>Support for &lt;a href="http://en.wikipedia.org/wiki/Modula"&gt;Modula&lt;/a&gt;, a descendant of the Pascal programming language.</string>
+	<string>Support for the &lt;a href="http://en.wikipedia.org/wiki/Modula-3"&gt;Modula-3&lt;/a&gt; language.</string>
 	<key>name</key>
-	<string>Modula</string>
+	<string>Modula-3</string>
 	<key>ordering</key>
 	<array>
 		<string>479D53FA-6ED6-11D9-8471-0011242E4184</string>
